plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.9.4'
}

group 'com.ruslooob'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.0'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

mainClassName = 'com.ruslooob.App'

application {
    mainModule = 'com.ruslooob'
    mainClass = 'com.ruslooob.App'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.ruslooob.App'
        )
    }
}

javafx {
    version = '17.0.0.1'
    modules = ['javafx.controls']
}

/*
simple exe - jpackage --type exe --input . --dest . --main-jar '.\Just Todo It-1.0-SNAPSHOT.jar' --main-class com.ruslooob.App --module-path "C:\Users\Ruslan\javafx-jmods-18.0.2" --add-modules javafx.controls --win-shortcut --win-menu
exe with inner packed virtual machine jpackage --type exe --input . --dest . --main-jar '.\Just Todo It-1.0-SNAPSHOT.jar' --main-class com.ruslooob.App --module-path "C:\Users\Ruslan\javafx-jmods-18.0.2" --add-modules javafx.controls --win-shortcut --win-menu --name "Just Todo It" --jlink-options --bind-services
todo fix problem process exited with code 1
*/

dependencies {
    implementation(group: 'org.kordamp.ikonli', name: 'ikonli-javafx', version: '12.3.1')
    implementation 'org.kordamp.ikonli:ikonli-materialdesign2-pack:12.3.1'

    implementation(group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.3')

    implementation group: 'org.jetbrains', name: 'annotations', version: '23.0.0'


    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

configurations.all {
    resolutionStrategy {
        failOnVersionConflict()
    }
}

test {
    useJUnitPlatform()
}